--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         <li><a href="Dining.html"><span class="glyphicon glyphicon-cutlery">Dining</span></a></li>
                         <li><a href="stuff.html"><span class="glyphicon glyphicon-calendar">Attractions</span></a></li>
                         <li><a href="lodge.html"><span class="glyphicon glyphicon-bed">Lodging</span></a></li>
+                      <li><a href="https://gavin64dd.github.io/Portfilio/">Portfilio</a></li>
                     </ul>
                 </div>
         </nav>
